# flappy_buddy_rs

./: Cargo.toml  README.MD
flappy_bot/: Cargo.toml
flappy_bot/src/: main.rs
flappy_lib/: Cargo.toml
flappy_lib/src/: error.rs  lib.rs
